--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -1395,10 +1395,47 @@ h6 { font-size: 1rem; font-weight: 500; }
       gap: 1rem;
     }
     
+    &-right {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-end;
+      text-align: right;
+      gap: 4px;
+    }
+    
     &-item {
       display: flex;
       align-items: center;
       gap: 0.25rem;
+    }
+  }
+  
+  &__archived-by {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    gap: 2px;
+    
+    &-user {
+      display: flex;
+      align-items: center;
+      gap: 0.375rem;
+    }
+    
+    &-avatar {
+      width: 1.25rem;
+      height: 1.25rem;
+      border-radius: 50%;
+      border: 1px solid $color-border-light;
+    }
+    
+    &-placeholder {
+      @include flex-center;
+      width: 1.25rem;
+      height: 1.25rem;
+      background-color: $color-border-focus;
+      border-radius: 50%;
+      color: $color-text-tertiary;
     }
   }
 }
